--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,6 @@
 	<classpathentry kind="lib" path="C:/Users/CVTE/Desktop/jar包/JFoenix -java GUI/jfoenix-8.0.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/CVTE/Desktop/jar包/JFoenix -java GUI/jfoenix-9.0.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/CVTE/Desktop/jar包/jai_core-1.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/CVTE/Desktop/jar包/mysql-connector-java-5.1.34.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
